--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>test</h1>
+    <script>
+        let x = document.querySlector('h1')
+        console.log(x)
+    </script>
 </body>
 </html>
