--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>test</h1>
     <script>
-        let x = document.querySlector('h1')
+        let x = document.querySelector('h1')
         console.log(x)
     </script>
 </body>
