--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+    <h1 id="test">test</h1>
     <script>
-        let x = document.querySelector('h1')
+        let x = document.querySelector('#test')
         console.log(x)
     </script>
 </body>
