--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1 id="test">test</h1>
     <script>
+        console.log('hello')
         let x = document.querySelector('#test')
         console.log(x)
     </script>
