--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1 id="test">test</h1>
     <script>
         console.log('hello')
-        let x = document.querySelector('#test')
-        console.log(x)
+     //   let x = document.querySelector('#test')
+     //   console.log(x)
     </script>
 </body>
 </html>
