--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="test">test</h1>
+    <h1 id="test">test 2</h1>
     <script>
         console.log('hello')
      //   let x = document.querySelector('#test')
